updated padding and width of restaurant-container and reviews-container to stop overflow. Index.html is still working

--- a/css/styles.css
+++ b/css/styles.css
@@ -254,12 +254,12 @@ nav h1 a {
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding: 3%;
+  width: 45%;
 }
-#reviews-container {
+/*#reviews-container {
   padding: 30px 40px 80px;
-}
+}*/
 #reviews-container h2 {
   color: #f58500;
   font-size: 24pt;
